--- a/TwitterIllustSearch/App.config
+++ b/TwitterIllustSearch/App.config
@@ -8,11 +8,16 @@
     
     <add key="WebHookURL" value="https://discordapp.com/api/webhooks/XXXXXXXX" />
 
+    <add key="DbFileName" value="postedToDiscord.db" />
+    <add key="LogFileName" value="log.txt" />
+
+
     <add key="keyword" value="凛世" />
     <add key="min_faves" value="100" />
     <add key="fooCount" value="50" />
     <add key="ngWordsProfile" value="コスプレ,こすぷれ,Cosplay,cosplay" />
     <add key="ngWords" value="コスプレ,こすぷれ,Cosplay,cosplay,フォロー,フォロバ,痛車" />
-    <add key="ngScreenName" value="_shinycolors_,imassc_official,imas_official,asobistore" />
+    <add key="ngScreenName" value="_shinycolors_,imassc_official,imas_official,asobistore,imas_DB,imas_tsushin,morinorinze1019" />
+    <add key="ngImageSize" value="2048*946,2048*996,1024*473,1792*828,2048*1024,2048*1152,2048*1106" />
   </appSettings>
 </configuration>
