--- a/TwitterIllustSearch/App.config
+++ b/TwitterIllustSearch/App.config
@@ -14,6 +14,7 @@
 
     <add key="keyword" value="凛世" />
     <add key="min_faves" value="100" />
+    <add key="min_retweets" value="30" />
     <add key="fooCount" value="50" />
     <add key="ngWordsProfile" value="コスプレ,こすぷれ,Cosplay,cosplay" />
     <add key="ngWords" value="コスプレ,こすぷれ,Cosplay,cosplay,フォロー,フォロバ,痛車" />
